# attractor_agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-mock.mjs  test_llm_mock.py  tmp_test_api.py
.github/workflows/: unit-tests.yml
attractor/: __init__.py  __main__.py  cli.py
attractor/agent/: __init__.py  config.py  docs.py  env.py  events.py  loop_detection.py  patch.py  registry.py  session.py  subagents.py  truncation.py  types.py
attractor/agent/profiles/: anthropic.py  base.py  gemini.py  litellm.py  openai.py
attractor/agent/tools/: common.py
attractor/db/: __init__.py  base.py  mongodb.py  sqlite.py
attractor/llm/: __init__.py  client.py  errors.py  generate.py  retry.py  types.py
attractor/llm/adapters/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  litellm.py  openai.py  openrouter.py
attractor/pipeline/: __init__.py  backend.py  conditions.py  context.py  engine.py  events.py  graph.py  interviewer.py  parser.py  retry.py  stylesheet.py  transforms.py  validator.py
attractor/pipeline/handlers/: __init__.py  base.py  builtin.py  compile.py  scoring.py  testing.py  twin.py
attractor_agent/: __init__.py  __main__.py  api.py  cli.py  extraction.py  gui.py  project.py  run-mock.mjs  runtime.py
examples/: add_number.dot  autonomous_build.json  full_sdlc.dot  simple.dot
fixtures/: default.json  generate.json  plan.json  score.json  sdlc.json  tests.json
projects/build_me_a_snake_game_gui_with/: checkpoint_Start.json  pipeline.dot
tests/: test_autonomy.py  test_cli_extraction.py  test_codergen_handler_output.py  test_conditions.py  test_conformance.py  test_conformance_fixes.py  test_dot_parser.py  test_engine.py  test_groq_provider.py  test_litellm_provider.py  test_misc.py  test_production.py  test_stability_fixes.py  test_validator.py
