[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attractor"
version = "0.1.0"
description = "DOT-based AI pipeline orchestration system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "litellm>=1.82.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
attractor = "attractor.cli:main"

[tool.setuptools.packages.find]
include = ["attractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["projects"]
